--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,12 @@
 main:
   - title: "블로그 방문하기"
     url: https://mongshell.github.io/
+  - title: "Categories"
+    url: /categories/
+  - title: "Tags"
+    url: /tags/
   - title: "About"
     url: /about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
