--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "몽쉘의 개발블로그"
 title_separator          : "-"
 subtitle                 : "If you want to go fast go alone. if you want to go far go together."
 name                     : "Mongshell"
-description              : "기록"
+description              : "If you want to go fast go alone. if you want to go far go together."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
