--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Home"
-    url: https://mongshell.github.io/
+    url: https://readableprogramming.github.io/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
